--- a/Contact.html
+++ b/Contact.html
@@ -18,7 +18,7 @@
       <textarea name="Your Message" rows="10" cols="30"></textarea><br>
       <input type="submit" name=""><br>
 
-
+<img src=""
     </form>
   </body>
 </html>
