--- a/index.html
+++ b/index.html
@@ -34,18 +34,36 @@
     <li>Univeristy of Maryland Global Campus - Pursuing BS - Cybersecurity</li>
   </ul>
   <hr>
+  <h3>Certifications</h3>
+  <ul>
+    <li>Certified Information Security Systems Professional</li>
+    <li>Cisco Certified Network Associate, Cyber Ops</li>
+    <li>SAFe Agilist</li>
+    <li>ITIL Foundations</li>
+    <li>Six Sigma White Belt</li>
+  </ul>
+  <hr>
+  <h3>Courses</h3>
+  <ul>
+    <li>DISA ACAS Course 2018</li>
+    <li>DISA HBSS 201 ePO5.1 Course</li>
+    <li>DISA HBSS 301 ePO5.1 Course</li>
+    <li>Elastic Engineering 1</li>
+    <li>Elastic Engineering 2</li>
+  </ul>
+  <hr>
   <h3>Work Experience</h3>
-  <table cellspacing=10>
+  <table cellspacing=30>
     <thead>
       <tr>
         <th>Dates</th>
-        <th>Work</th>
+        <th>Job Title</th>
         <th>Duties</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>October 2019 - Present</td>
+        <td>October 2019 - July 2020</td>
         <td>SecDevOps Engineer at <a href="https://rmcweb.com/">Resource Management Concepts</a></td>
         <td>Managed application hosting for DoD clients. Troubleshoot customer application issues. Deployed updated code for hosted web applications. Ensured infrastructure is configured to comply with DoD STIG’s. Assisted with validating artifacts
           input into EMASS and ensuring RMF controls were satisfied. Working on automation of server health checks using PowerShell</td>
@@ -58,19 +76,54 @@
           Mapping. Assisted with vulnerability mitigation using SCAP tool and ACAS</td>
       </tr>
       <tr>
-        <td></td>
+        <td>January 2019 - January 2020</td>
+        <td>Senior Systems Engineer <a href="https://www.delltechnologies.com/en-us/index.htm">DellEMC</a></td>
+        <td>Participated in Technical Refresh project where we moved EM7 from older servers running an older version of the application to the latest version running in a hyperconverged environment. Assisted with securing NGINX ciphers to prevent vulnerabilities. Actively supported and installed EM7 for several customers worldwide. Responsible for the implementation and administration of the monitoring tool EM7. Creation and monitoring of alerts based on the agreed SLA's. Configured and monitored EM7 appliances (Oracle Linux).</td>
       </tr>
       <tr>
-        <td></td>
+        <td>October 2018 - February 2019</td>
+        <td>Vulnerability Manage at <a href="https://www.insightglobal.com/">Insight Global</a></td>
+        <td>Provided implementation, engineering, configuration and administration support for ACAS. Provided technical support to customers involving software, hardware and DoD specific configurations. Created reports for management to view and visualize effectiveness of vulnerability remediation plans. Developed compliant documentation to assist with completion of RMF accreditation package. Operated and maintained virtual development environment for agency developed applications. Assisted with creation of change management process. Created policy documentation to comply with DoD controls.</td>
       </tr>
       <tr>
-        <td></td>
+        <td>April 2017 - October 2018</td>
+        <td>Senior Solutions Architect at <a href="https://www.virtustream.com/">Virtustream</a></td>
+        <td>Managed multiple Active Directory environments and associated GPO polices. Provided technical expertise to develop solutions to problems. Configured GPO’s to enable automatic enablement of EM7 monitoring solution. Configured and deployed configuration management database using EM7 and ServiceNow. Tuned alerts and thresholds for em7 solution. Assisted with initiation, planning and deployed of EM7 monitoring solution. Implemented mail relay to enable ticket creation with cross-domain ServiceNow implementation. Assessed vulnerabilities for Windows, Linux and ESXI assets and prioritizing which ones should be addressed. Assisted with SAML configuration to enable single sign-on with ServiceNow implementation. Assisted in the creation, generating, and updating of Plans of Action and Milestones. Helped identify, implement, and maintain appropriate security and compliance measures. Performed SCAP Compliance Checker (SCC) scans to ensure configurations are in accordance with latest DISA STIGs. Implementing and supporting Defense Information System Agency (DISA) Secure Technical Implementation Guides (STIG) for Red Hat Linux and Microsoft Windows Server Operating Systems. Recommended and implemented solutions to remediate findings from security and vulnerability assessments.</td>
       </tr>
       <tr>
-        <td></td>
+        <td>May 2016 - April 2017</td>
+        <td>Senior Systems Engineer/ISSO at <a href="https://www.teksystems.com/en">Teksystems</a></td>
+        <td>Analyze, troubleshoot and maintain network and server infrastructure to ensure availability. Ensure all Microsoft and third party patching is performed. Assist with supporting various teams with IT assets. Assists Configuration Management Working Group with task involving IBM Jazz system. Assist with the completion of CSSP cases. Perform Nessus Security scans to ensure all known vulnerabilities are mitigated or documented within a system Plan of Actions and Milestones. Assisted with migration to Palo Alto firewalls. Develop plans to complete team projects and tasks. Implement and enforce security policies. Ensure all certification, accreditation and system security documentation is kept up to date using EMASS. Assist with the completion of RMF package to migrate DIACAP ATO to RMF to include completion of RMF system categorization and SSP. Ensure that all assets are migrated to Windows 10 by December 31, 2016 deadline. Ensuring compliance of all assets.</td>
       </tr>
       <tr>
-        <td></td>
+        <td>March 2013 - May 2016</td>
+        <td>IT Engineer at <a href="https://www.armyemergencyrelief.org/">Army Emergency Relief</a></td>
+        <td>Completely virtualized server infrastructure. Assist with completing package to receive RMF ATO for newly built information system. Implementing network controls to comply with NIST 800-53 rev 4 and STIGS. Use of SCAP tool to ensure compliance. Installed, configured and maintained several Solarwinds monitoring tools to monitor our hardware and applications. Installed, configured and maintain new core switch. Replaced layer 3 firewall with one capable of application level inspection. Maintains backups of servers to comply with DOD and Army requirements. Completely virtualized server infrastructure. Manage all production systems and test Microsoft SQL 2005/2008 Database instances. Implemented internal ticketing system to track user problems. Assists with the migration to new web based CRM to increase efficiency of employees. Member of the security incident response team. Manages databases containing over 2 million records of highly sensitive data and develop Ad-hoc SQL queries to address various multi-departmental issues and concerns. Using Nessus to scan for vulnerabilities.</td>
+      </tr>
+      <tr>
+        <td>August 2012 - March 2013</td>
+        <td>Network Specialist at <a href="http://www.qbe.net/">Quality Business Engineering</a></td>
+        <td>Effectively monitor core, mobile device and other essential application services on enterprise NIPR and SIPR networks in support of 17k+ users using BoxTone MDM, SolarWinds and Microsoft Systems Center Operations Manager (SCOM) 2007 R2 for 500+ active servers.  Provide routine server maintenance, patching and tier-3 troubleshooting and escalated notifications for active alerts, events and error messages to include server failures, insufficient disk space and network outages.</td>
+      </tr>
+      <tr>
+        <td>May 2012 - March 2013</td>
+        <td>IT Auditor at G&B Solutions</td>
+        <td>Effectively monitor core, mobile device and other essential application services on enterprise NIPR and SIPR networks in support of 17k+ users using BoxTone MDM, SolarWinds and Microsoft Systems Center Operations Manager (SCOM) 2007 R2 for 500+ active servers.  Provide routine server maintenance, patching and tier-3 troubleshooting and escalated notifications for active alerts, events and error messages to include server failures, insufficient disk space and network outages.</td>
+      </tr>
+      <tr>
+        <td>January 2012 - May 2012</td>
+        <td>Network Administrator at <a href="http://www.gst.com/">Global Science & Technology</a></td>
+        <td>Responsible for all network equipment. Ensured that the network connectivity throughout a company's LAN/WAN infrastructure is on par with technical considerations at the network level of Global Science & Technology's hierarchy. Made recommendations concerning software to establish the relative merits for meeting customer needs. Managed software and appliance licenses, maintaining the standards for server installations and applications and monitoring the performance of the network, checking for security breaches and poor data management practices. Analyzed operational statistics to optimize system operations and performance. Facilitated collection and presentation of usage statistics to maximize use of mobile technologies at reasonable cost. Evaluated and installed Solarwinds Orion Network Performance Monitor to improve bandwidth utilization and create a network baseline. Increased disaster recovery readiness by installing service to backup network configurations to file server nightly. Monitored and maintained Postini Spam Filter for Microsoft Exchange.  Assist with design efforts for off-site server communication. Assisted co-workers with various problems on Windows and Apple systems.</td>
+      </tr>
+      <tr>
+        <td>August 2011 - January 2012</td>
+        <td>NOC Technician at <a href="https://www.presidio.com/">Presidio Network Solutions</a></td>
+        <td>In a NOC environment, I monitored systems for clients using Tivoli Netcool network management software and ensured that all SLAs are fulfilled to customer requirements. Followed up with customers to ensure proper handling of issues per NOC procedures. Performed configuration changes per customer request. Opened tickets to capture events. When required, escalate issues to higher tier. Opened Cisco TAC cases to aid in resolving outstanding issues.</td>
+      </tr>
+      <tr>
+        <td>May 2008 - July 2011</td>
+        <td>Network Administrator at <a href="https://altarum.org/">Altarum Institute</a></td>
+        <td>Performed network administration within our Cisco/Juniper infrastructure and was the point of contact and responsible party for Firewall Administration (Cisco ASA/Palo Alto), VPN Administration (Cisco ASA/Palo Alto), switch administration (Cisco/Juniper), and wireless system administration (BlueSocket). Installed, implemented, configured, customizes, optimized, and maintained mobile systems and related network equipment and technologies within the Institute. Participated in several vendor evaluations to compare products for implementations into the corporate network. Assisted with the creation of corporate policies regarding network equipment and software use. Installed, configured and managed Symantec endpoint Encryption Created computer images using Symantec Ghost Suite. Created, modified and deleted users using Cisco Call Manager and Unity systems. Handled new user orientations for the Virginia office. Assisted staff in synching company smartphones to exchange server. Responsible for constantly improving customer service, communications, relationships and ensuring the integration of IT programs and services across the infrastructure. Provided outstanding Desktop/Helpdesk support to staff both onsite and offsite, remotely via telephone.</td>
       </tr>
 
     </tbody>
